--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
+    "@tabler/icons-react": "^3.31.0",
     "isbot": "^5.1.17",
+    "radix-ui": "^1.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@react-router/dev": "^7.1.3",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
