--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
 		"start": "react-router-serve ./build/server/index.js",
 		"typecheck": "react-router typegen && tsc",
 		"check": "biome check --write .",
-		"check:ci": "biome ci ."
+		"check:ci": "biome ci .",
+		"wasm": "wasm-pack build ../wasm --target web --out-dir ../frontend/app/pkg"
 	},
 	"dependencies": {
 		"@react-router/node": "^7.1.3",
