feat: タイムラインの機能を拡充

--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,6 +11,7 @@ bytemuck = "1.23.0"
 console_error_panic_hook = "0.1.7"
 gloo = "0.11.0"
 js-sys = "0.3.77"
+serde = "1.0.219"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
 web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
