--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"radix-ui": "^1.3.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hotkeys-hook": "^5.1.0",
 		"react-router": "^7.1.3"
 	},
 	"devDependencies": {
