--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,7 +11,9 @@ bytemuck = "1.23.0"
 console_error_panic_hook = "0.1.7"
 gloo = "0.11.0"
 js-sys = "0.3.77"
+rmp-serde = "1.3.0"
 serde = "1.0.219"
+serde_bytes = "0.11.17"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
 web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
