--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -14,6 +14,7 @@ js-sys = "0.3.77"
 rmp-serde = "1.3.0"
 serde = "1.0.219"
 serde_bytes = "0.11.17"
+uuid = { version = "1.17.0", features = ["v4", "js", "serde"] }
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
 web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
