--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,26 @@
 		"wasm": "wasm-pack build ../wasm --target web --out-dir ../frontend/app/pkg"
 	},
 	"dependencies": {
-		"@react-router/node": "^7.1.3",
-		"@react-router/serve": "^7.1.3",
-		"@tabler/icons-react": "^3.31.0",
-		"isbot": "^5.1.17",
-		"radix-ui": "^1.3.3",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
+		"@react-router/node": "^7.6.3",
+		"@react-router/serve": "^7.6.3",
+		"@tabler/icons-react": "^3.34.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"isbot": "^5.1.28",
+		"radix-ui": "^1.4.2",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
 		"react-hotkeys-hook": "^5.1.0",
-		"react-router": "^7.1.3"
+		"react-router": "^7.6.3",
+		"tailwindcss": "^4.1.11"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@react-router/dev": "^7.1.3",
-		"@types/node": "^20",
-		"@types/react": "^19.0.1",
-		"@types/react-dom": "^19.0.1",
-		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.16",
-		"typescript": "^5.7.2",
-		"vite": "^5.4.11",
+		"@biomejs/biome": "2.0.6",
+		"@react-router/dev": "^7.6.3",
+		"@types/node": "^24",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"typescript": "^5.8.3",
+		"vite": "^7.0.2",
 		"vite-tsconfig-paths": "^5.1.4"
 	}
 }
