--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
 		"react-dom": "^19.1.0",
 		"react-hotkeys-hook": "^5.1.0",
 		"react-router": "^7.6.3",
-		"tailwindcss": "^4.1.11"
+		"tailwindcss": "^4.1.11",
+		"vite-plugin-babel": "^1.3.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
@@ -30,6 +31,7 @@
 		"@types/node": "^24",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
+		"babel-plugin-react-compiler": "^19.1.0-rc.2",
 		"typescript": "^5.8.3",
 		"vite": "^7.0.2",
 		"vite-tsconfig-paths": "^5.1.4"
