--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**", "!**/app/pkg/**/*"]
+		"includes": ["**", "!**/app/pkg/**/*", "!**/.react-router"]
 	},
 	"formatter": {
 		"enabled": true,
