--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 bytemuck = "1.23.0"
+cgmath = "0.18.0"
 console_error_panic_hook = "0.1.7"
 gloo = "0.11.0"
 js-sys = "0.3.77"
